deployments/eks/squrl-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squrl-api-deployment
  labels:
    app: squrl-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squrl-api
  template:
    metadata:
      labels:
        app: squrl-api
    spec:
      containers:
      - name: squrl-api
        image: 589393935197.dkr.ecr.us-east-1.amazonaws.com/squrl_api_service:dev
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: squrl-api-service
  labels:
    app: squrl-api
spec:
  selector:
    app: squrl-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
