deployments/eks/squrl-redirection.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squrl-redirection-deployment
  labels:
    app: squrl-redirection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squrl-redirection
  template:
    metadata:
      labels:
        app: squrl-redirection
    spec:
      containers:
      - name: squrl-redirection
        image: 589393935197.dkr.ecr.us-east-1.amazonaws.com/squrl_redirection_service:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: squrl-redirection-service
  labels:
    app: squrl-redirection
spec:
  selector:
    app: squrl-redirection
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
